# priyanshu_project

./: .gitignore  api.py  app.py  pyproject.toml  requirements.txt  test_all_captchas.py  worker.py
src/: behavior.py  browser.py  cli.py  config.py  daemon.py  detector.py  fingerprint.py  metrics.py  models.py  profiles.py  proxy.py  queue.py  router.py
src/solvers/: __init__.py  audio.py  base.py  browser_audio.py  browser_click.py  browser_image.py  browser_keycaptcha.py  browser_rotate.py  browser_text.py  browser_token.py  funcaptcha.py  geetest.py  image_classifier.py  ocr.py
src/ui/: index.html  script.js  styles.css
src/utils/: http.py  image.py  logging.py  model_manager.py  retry.py  selectors.py
tests/: sandbox_server.py  test_audio_solver.py  test_e2e.py  test_edge_cases.py  test_image_utils.py  test_metrics.py  test_models.py  test_ocr_solver.py  test_sandbox.py  test_solvers.py
tests/sandbox/: index.html
tests/sandbox/recaptcha/api2/: anchor.html  bframe.html
